App/src/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	:root {
		--background: 0 0% 100%;
		--foreground: 216 100% 11%;

		--card: 0 0% 100%;
		--card-foreground: 216 100% 11%;

		--popover: 0 0% 100%;
		--popover-foreground: 216 100% 11%;

		--primary: 221.2 83.2% 53.3%;
		--primary-foreground: 210 40% 98%;

		--secondary: 210 40% 96.1%;
		--secondary-foreground: 222.2 47.4% 11.2%;

		--muted: 210 40% 96.1%;
		--muted-foreground: 215.4 16.3% 46.9%;

		--accent: 196 91% 74%;
		--accent-foreground: 222.2 47.4% 11.2%;

		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 210 40% 98%;

		--border: 214.3 31.8% 91.4%;
		--input: 214.3 31.8% 91.4%;
		--ring: 221.2 83.2% 53.3%;
		--radius: 0.5rem;
	}

	.dark {
		--background: 216 100% 11%;
		--foreground: 210 40% 98%;

		--card: 216 100% 11%;
		--card-foreground: 210 40% 98%;

		--popover: 216 100% 11%;
		--popover-foreground: 210 40% 98%;

		--primary: 206 100% 61.8%;
		--primary-foreground: 222.2 47.4% 11.2%;

		--secondary: 214 57.6% 15.6%;
		--secondary-foreground: 210 40% 98%;

		--muted: 214 57.6% 15.6%;
		--muted-foreground: 215 20.2% 65.1%;

		--accent: 214 57.6% 15.6%;
		--accent-foreground: 215 20.2% 65.1%;

		--destructive: 0 62.8% 30.6%;
		--destructive-foreground: 210 40% 98%;

		--border: 217.2 32.6% 17.5%;
		--input: 217.2 32.6% 17.5%;
		--ring: 224.3 76.3% 48%;
	}
}

@layer base {
	* {
		@apply border-border;
	}
	body {
		@apply bg-background text-foreground;
	}
}

